Fixed spacing on FAQ page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -533,8 +533,9 @@ https://stackoverflow.com/questions/39718512/put-footer-at-the-bottom-html-relat
   outline-offset: -0.3vw;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 500px) {
   .faq_main {
+    margin-top: -40vh;
     background-image: none;
   }
   .faq_header {
